fixing font rendering on safari

--- a/css/fonts1.css
+++ b/css/fonts1.css
@@ -5,7 +5,7 @@
   @font-face {
       font-family: 'Space Grotesk';
       src: url('/fonts/SpaceGrotesk-Medium.woff2') format('woff2'),
-          url('/fonts/SpaceGrotesk-Medium.woff') format('woff')
+          url('/fonts/SpaceGrotesk-Medium.woff') format('woff'),
           url('/fonts/SpaceGrotesk-Medium.otf') format('otf');
       font-weight: 500;
       font-style: normal;
@@ -14,7 +14,7 @@
   @font-face {
       font-family: 'Space Grotesk';
       src: url('/fonts/SpaceGrotesk-Regular.woff2') format('woff2'),
-          url('/fonts/SpaceGrotesk-Regular.woff') format('woff')
+          url('/fonts/SpaceGrotesk-Regular.woff') format('woff'),
           url('/fonts/SpaceGrotesk-Regular.otf') format('otf');
       font-weight: 400;
       font-style: normal;
@@ -22,17 +22,17 @@
 
 
   @font-face {
-      font-family: Space Grotesk;
+      font-family: 'Space Grotesk';
       src: url('/fonts/SpaceGrotesk-SemiBold.woff2') format('woff2'),
-          url('/fonts/SpaceGrotesk-SemiBold.woff') format('woff')
+          url('/fonts/SpaceGrotesk-SemiBold.woff') format('woff'),
           url('/fonts/SpaceGrotesk-SemiBold.otf') format('otf');
       font-weight: 600;
   }
 
   @font-face {
-      font-family: Space Grotesk;
+      font-family: 'Space Grotesk';
       src: url('/fonts/SpaceGrotesk-Bold.woff2') format('woff2'),
-          url('/fonts/SpaceGrotesk-Bold.woff') format('woff')
+          url('/fonts/SpaceGrotesk-Bold.woff') format('woff'),
           url('/fonts/SpaceGrotesk-Bold.otf') format('otf');
       font-weight: 700;
   }
@@ -81,6 +81,7 @@
       margin-top: 1rem;
       margin-bottom: 1rem;
       font-weight: 400;
+      font-style: normal;
   }
 
   h4,
@@ -102,6 +103,7 @@
       font-style: normal;
       margin-left: 1rem;
       margin-right: 1rem;
+      font-style: normal;
   }
 
   .eyebrow {
